change item archive to delete
